@@ -1,7 +1,6 @@
 package com.nowui.chuangshi.util;
 
 import org.apache.commons.codec.binary.Base64;
-import sun.misc.BASE64Decoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
@@ -16,7 +15,7 @@ public class AesUtil {
     }
 
     public static byte[] base64Decode(String base64Code) throws Exception {
-        return new BASE64Decoder().decodeBuffer(base64Code);
+        return Base64.decodeBase64(base64Code);
     }
 
     public static byte[] aesEncryptToBytes(String content, String encryptKey) throws Exception {
